--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
   "name": "kyrin",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A high-performance, batteries-included framework for Bun. Built to eliminate decision fatigue.",
   "type": "module",
+  "main": "./dist/lib.js",
+  "types": "./dist/lib.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/lib.d.ts",
+      "import": "./dist/lib.js"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "bun run --watch src/index.ts",
     "build": "bun run build:js && bun run build:types",
-    "build:js": "bun build src/index.ts --outdir dist --target bun --minify",
+    "build:js": "bun build src/lib.ts --outdir dist --target bun --minify",
     "build:types": "tsc --emitDeclarationOnly --outDir dist",
     "test": "bun test",
     "test:watch": "bun test --watch",
