--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,9 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 # Finder (MacOS) folder config
 .DS_Store
 
-#ignore examples and guide version and tests 
+#ignore temp file
 examples
 guide version
 tests   
 benchmarks
+docs
