--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kyrin",
-  "version": "0.0.1-experimental.2",
+  "version": "0.0.1-experimental.3",
   "description": "A simple, fast web framework for Bun",
   "type": "module",
   "main": "./dist/lib.js",
@@ -52,6 +52,7 @@
   "dependencies": {},
   "devDependencies": {
     "@types/bun": "latest",
-    "typescript": "^5"
+    "typescript": "^5",
+    "zod": "^4.2.1"
   }
 }
